Dcreator/src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>Applicant__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Degree_Earned__c</fullName>
        <label>Degree Earned</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gscore__c</fullName>
        <label>GRE score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IELTS_if_any__c</fullName>
        <label>IELTS(if any)</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nationality</label>
        <picklist>
            <picklistValues>
                <fullName>USA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pakistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nepal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>StudentId__c</fullName>
        <displayFormat>Z-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>StudentId</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Term_for_which_you_are_applying__c</fullName>
        <label>Term for which you are applying</label>
        <picklist>
            <picklistValues>
                <fullName>Summer 2015(Graduate Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spring 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer 2016(Graduate Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spring 2016</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tscore__c</fullName>
        <label>TOEFL (if any)</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <label>Zipcode</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>course__c</fullName>
        <label>Course you are trying to apply for:</label>
        <picklist>
            <picklistValues>
                <fullName>Computer science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Political</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>